--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "kindle_sale_watcher is a bot that posts kindle sale items on slack.",
   "main": "main.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/jz4o/kindle_sale_watcher/issues"
   },
-  "homepage": "https://github.com/jz4o/kindle_sale_watcher#readme"
+  "homepage": "https://github.com/jz4o/kindle_sale_watcher#readme",
+  "dependencies": {
+    "clasp": "^1.0.0"
+  }
 }
