--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   },
   "homepage": "https://github.com/jz4o/kindle_sale_watcher#readme",
   "dependencies": {
-    "clasp": "^1.0.0"
+    "@google/clasp": "2.4.2"
   }
 }
